[package]
authors = ["Ivan Milicin <ivan.milicin@gmail.com>"]
name = "msp430fr5949"
version = "0.1.0"

[dependencies]
bare-metal = "0.2.0"
msp430 = "0.2.2"
vcell = "0.1.2"

[dependencies.msp430-atomic]
version = "0.1.2"

[dependencies.msp430-rt]
optional = true
version = "0.2.0"

[features]
rt = ["msp430-rt/device"]
