[package]
authors = ["Ivan Milicin <ivan.milicin@gmail.com>"]
name = "msp430fr5949"
version = "0.1.1"

[dependencies]
bare-metal = "1.0.0"
msp430 = "0.4.0"
vcell = "0.1"

[dependencies.critical-section]
version = "1.0"
optional = true

[dependencies.msp430-atomic]
version = "0.1"

[dependencies.msp430-rt]
optional = true
version = "0.4.0"

[features]
rt = ["msp430-rt/device"]
